Wed Nov 02 08:04:13 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
        * tests/Collocation/Receiver/Receiver_exec.cpp:
        * tests/Collocation/Sender/Sender_exec.cpp:
        Removed unreferenced local variables


Wed Nov 02 08:30:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Tue Nov  1 09:11:13 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * tests/IDL_Test/Inherited_Component/Extended/Base.mpc:
                  Layout changes.

                * tests/IDL_Test/Inherited_Component/Extended/Derived.mpc:
                  Linux link error.

        Tue Nov  1 08:48:41 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * tests/IDL_Test/Inherited_Component/Extended/Derived.idl:
                  Used module name to identify the supported interface.

                * tests/IDL_Test/Inherited_Component/Extended/Derived.mpc:
                  Fixed link issue on linux

        Mon Oct 31 13:53:36 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * ciao/Containers/Extension/Extension_Container.h:
                * ciao/Containers/Session/Session_Container.h:
                * ciao/Contexts/Extension/Extension_Context_T.cpp:
                * ciao/Deployment/Handlers/CIAO_Handler_Common.cpp:
                * ciao/Deployment/Handlers/CIAO_State.cpp:
                * ciao/Deployment/Handlers/Component_Handler.h:
                * ciao/Deployment/Handlers/Component_Handler.cpp:
                * ciao/Deployment/Handlers/Connection_Handler.cpp:
                * ciao/Deployment/Handlers/Container_Handler.cpp:
                * ciao/Deployment/Handlers/Home_Handler.h:
                * ciao/Deployment/Handlers/Home_Handler.cpp:
                * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
                * ciao/Servants/Connector_Servant_Impl_Base.cpp:
                  Several improvements regarding thread safety. Also